--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -36,6 +36,7 @@ body {
 @media screen and (max-width: 1000px) {
   .main-logo {
     max-width: 90vw;
+    height: auto;
   }
 }
 
@@ -165,6 +166,12 @@ body {
 .proj-deck {
   padding-top: 4vh;
   margin-bottom: 1em;
+}
+
+@media screen and (max-width: 1000px) {
+  .proj-deck {
+    padding: 0vh;
+  }
 }
 
 .proj-gitbox {
