--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -49,6 +49,7 @@ justify-content: space-around;
 
   @media screen and (max-width: 1000px) {
     max-width: 90vw;
+    height: auto;
   }
 }
 
@@ -165,8 +166,11 @@ justify-content: space-around;
 
 .proj-deck {
   padding-top: 4vh;
-
   margin-bottom: 1em;
+  @media screen and (max-width: 1000px) {
+    padding: 0vh;
+  }
+
 }
 
 .proj-gitbox{
