--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -31,7 +31,7 @@ header {
   a {
     color: $orange;
     transition: color 0.3s ease;
-
+    text-decoration: none;
     &:hover {
       color: darken($orange, 15%)
     }
